fix code to target gallery title. align it center.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Coustard&family=Lato:wght@300&family=Lexend+Deca:wght@100;400&family=Share&family=Source+Serif+Pro&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     border: none;
 }
+
 body {
     font-family: Source-serif-pro, sans-serif;
     font-weight: 300;
@@ -12,6 +14,7 @@ body {
     background-image: url("../images/flooring.jpeg");
     background-attachment: fixed;
 }
+
 #mylogo {
     text-align: center;
     margin-top: 10px;
@@ -22,11 +25,12 @@ body {
     margin: auto;
     border-radius: 20px;
     margin-bottom: 10px;
-} 
+}
+
 .photo {
     width: 75%;
-    margin:auto;
-    height:300px;
+    margin: auto;
+    height: 300px;
     background-image: url('../images/deer.jpeg');
     background-position: center center;
     background-size: cover;
@@ -35,10 +39,12 @@ body {
     border: 1px solid white;
 
 }
+
 .nav {
     text-decoration: none;
     color: #f5f5f5;
 }
+
 .head {
     border: 1px solid white;
     width: 75%;
@@ -48,16 +54,19 @@ body {
     margin-top: 10px;
     border-radius: 20px;
 }
+
 #mymenu {
     font-size: large;
     letter-spacing: 2px;
     text-align: center;
     margin-top: 30px;
 }
+
 #mymenu li {
     display: inline-block;
     margin-right: 15px;
 }
+
 #maindiv {
     border: solid white 1px;
     border-radius: 20px;
@@ -69,6 +78,7 @@ body {
     background-position: center center;
     background-size: cover;
 }
+
 #p {
     width: 50%;
     height: 500px;
@@ -77,42 +87,55 @@ body {
     text-align: center;
     font-size: 1rem;
 }
+
 @media screen and (max-width: 750px) {
-    #photo {
+    .photo {
         width: 95%;
         height: 450px;
-        margin:0 auto;
+        margin: 0 auto;
     }
+
     nav {
         width: 95%;
         height: 100px;
         margin: 0 auto;
     }
+
     #maindiv {
         width: 95%;
         height: 1200px;
         margin: 0 auto;
-} 
-.head {
-    width: 95%;
+    }
+
+    .head {
+        width: 95%;
+    }
+
+    #mylogo {
+        width: 95%;
+    }
+
+    #p {
+        width: 75%;
+    }
+
+    .respond {
+        width: 95%;
+    }
+
+    footer {
+        width: 95%;
+        height: 100px;
+    }
 }
-#mylogo {
-    width: 95%;
-}
-#p {
-    width: 75%;
-}
-footer {
-    width: 95%;
-    height: 100px;
-}
-}
+
 p {
     font-size: large;
     letter-spacing: 2px;
     text-align: center;
     margin-top: 30px;
 }
+
 footer {
     border: 1px solid white;
     width: 75%;
@@ -124,27 +147,41 @@ footer {
     border-radius: 20px;
     text-align: center;
 }
+
 footer a {
     color: #f5f5f5;
 }
+
 #return {
     font-size: large;
     letter-spacing: 2px;
     text-decoration: none;
 }
+
 .bottom {
     text-decoration: none;
     letter-spacing: 2px;
     font-size: x-small;
 }
+
+#head {
+    border: 1px solid white;
+    width: 75%;
+    margin: auto;
+    height: 80px;
+    background-color: black;
+    margin-top: 10px;
+    border-radius: 20px;
+}
 .title {
     text-align: center;
     padding-top: 20px;
 }
+
 #hare {
     width: 75%;
-    margin:auto;
-    height:300px;
+    margin: auto;
+    height: 300px;
     background-image: url('../images/hare.jpeg');
     background-position: center center;
     background-size: cover;
@@ -153,10 +190,11 @@ footer a {
     border: 1px solid white;
     margin-top: 10px;
 }
+
 #hunters {
     width: 75%;
-    margin:auto;
-    height:300px;
+    margin: auto;
+    height: 300px;
     background-image: url('../images/hunters.jpeg');
     background-position: center center;
     background-size: cover;
@@ -165,10 +203,11 @@ footer a {
     border: 1px solid white;
     margin-top: 10px;
 }
+
 #jeep {
     width: 75%;
-    margin:auto;
-    height:300px;
+    margin: auto;
+    height: 300px;
     background-image: url('../images/jeep.jpeg');
     background-position: center center;
     background-size: cover;
@@ -177,10 +216,11 @@ footer a {
     border: 1px solid white;
     margin-top: 10px;
 }
+
 #teens {
     width: 75%;
-    margin:auto;
-    height:300px;
+    margin: auto;
+    height: 300px;
     background-image: url('../images/kids.jpeg');
     background-position: center center;
     background-size: cover;
@@ -189,10 +229,11 @@ footer a {
     border: 1px solid white;
     margin-top: 10px;
 }
+
 #fire {
     width: 75%;
-    margin:auto;
-    height:300px;
+    margin: auto;
+    height: 300px;
     background-image: url('../images/campfire.jpeg');
     background-position: center center;
     background-size: cover;
